ibm-dpservice-instance/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: migration-example-0
  namespace: tools
spec:
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  selector:
    app.kubernetes.io/component: datapower
    app.kubernetes.io/instance: tools-migration-example
    app.kubernetes.io/managed-by: datapower-operator
    app.kubernetes.io/name: datapower
    app.kubernetes.io/part-of: ibm-datapower-migration-example
    app.kubernetes.io/version: 10.0.4.0sr1
    controller-revision-hash: migration-example-5d7f48b475
    statefulset.kubernetes.io/pod-name: migration-example-0
  clusterIP: 172.30.47.43
  clusterIPs:
    - 172.30.47.43
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
