ibm-dpservice-instance/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: migration-example-0
  namespace: tools
spec:
  to:
    kind: Service
    name: migration-example-0
    weight: 100
  port:
    targetPort: 8001
  wildcardPolicy: None
